# elfie-lab-analyzer

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.original.md  DEPLOY.md  DEPLOYMENT.md  GEMINI.md  PLAN.md  README.md  agent-ops-lessons.md  bugs.md  clin.json  debug_replace.py  debug_replace2.py  debug_test.py  debug_test2.py  docker-compose.prod.yml  docker-compose.yml  labs_analyzer_v10_parallel_distribution_rewritten.md  labs_analyzer_v10_source_of_truth.md  labs_analyzer_v10_tests_guardrails.md  labs_analyzer_v11_source_of_truth.md  labs_analyzer_v12_delta_plan.md  labs_analyzer_v13_final_architecture_definition.md  pat.json  render.yaml  research_results.md  subagent-task-template.md  ultimate-workflow-reference.md  up11.json  up12.json  up_s2.json  up_s3.json  up_s4.json  up_sterling.json  worker_result.json
backend/: .dockerignore  Dockerfile  alembic.ini  check_pipeline.py  check_pipeline2.py  debug_labels.py  diagnostic_analyte_coverage.py  expand_aliases.py  fast_fix.py  fast_fix2.py  fix_all.py  fix_beta.py  fix_extract_structured.py  fix_persistence.py  fix_persistence2.py  fix_test_14.py  fix_test_27.py  fix_tests.py  fix_trust_status.py  patch2.py  patch_all.py  patch_extract_rows.py  patch_final.py  patch_gateway.py  patch_imports.py  patch_it2.py  patch_pipeline_extract.py  patch_ucum.py  pyproject.toml  pyproject.toml_patch.py  test2.py  test_gateway.py  test_inspector.py  test_inspector2.py  test_pdf.py  test_pipeline.py  test_script.py  test_vlm_fix.py  verify_labels.py
backend/alias_tables/: launch_scope_analyte_aliases.json
backend/app/: config.py  main.py
backend/app/api/: auth.py  deps.py
backend/app/db/: __init__.py  store.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py  artifact.py  chat.py  extraction.py  finding.py  lineage.py  metric.py  observation.py  patient_context.py  upload.py
backend/app/services/: __init__.py  clinician_pdf.py  data_paths.py  lab_normalizer.py  mineru_adapter.py  observability.py  patient_pdf.py  privacy.py  vlm_gateway.py
backend/app/terminology/: __init__.py
backend/app/workers/: pipeline.py
backend/artifacts/debug/: 09bd7b8c-f079-5c98-a648-cbd6b3817893_vlm_extraction.json  3dd29ed9-a1e7-54c7-b42f-7005b9811e63_vlm_extraction.json  4516566f-2569-582b-ab99-2e6952b60677_vlm_extraction.json  6288d722-529d-58dc-b4da-00ef97485659_vlm_extraction.json  684c9c31-dec3-593d-afdf-6f27cb211707_vlm_extraction.json  6aeefcc0-990d-54bf-a35c-d63bf3a8792e_vlm_extraction.json  6d5bc12a-ac8d-5cfd-b8bd-f3155ea17d25_vlm_extraction.json  77c32374-68e6-552a-91f8-8ae605e3192d_vlm_extraction.json  7f90ea8e-c009-5af0-97cc-8b81d6ef75f0_vlm_extraction.json  (+9 more)
backend/artifacts/dev-terminology/: metadata.json
backend/debug_loinc/: metadata.json
backend/loinc/: metadata.json
backend/policy_tables/: launch_scope_rules.json
backend/scripts/: docker_start.sh
backend/tests/: conftest.py
(+262 files in other folders)
