[project]
name = "elfie-labs-analyzer"
version = "0.1.0"
description = "Patient-facing lab understanding feature for Elfie Health Report"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyMuPDF>=1.24.0,<1.28.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "F401", "F811", "F821", "I001", "N", "UP"]
"verify_labels.py" = ["E401", "I001"]
"debug_labels.py" = ["E401", "I001"]

[tool.mypy]
python_version = "3.11"
strict = false
files = ["app"]
exclude = "(^tests[\\\\/]|^debug_labels\\.py$|^verify_labels\\.py$)"
ignore_missing_imports = true
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "dict-item",
    "index",
    "no-redef",
    "operator",
    "return-value",
    "union-attr",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
